Templates, Legacy: fix horizontal scrollbar on member directories on twentyseventeen
Props elhardoum

Fixes #7917 (3.0 branch)

git-svn-id: https://buddypress.svn.wordpress.org/branches/3.0@12227 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/src/bp-core/css/buddybar-rtl.css
+++ b/src/bp-core/css/buddybar-rtl.css
@@ -100,7 +100,7 @@ body#bp-default #admin-bar-logo {
 	padding: 0;
 	float: right;
 	position: relative;
-	background: url(../images/admin-menu-arrow.gif) 88% 53% no-repeat;
+	background: url(../images/admin-menu-arrow.gif) 12% 53% no-repeat;
 	padding-left: 11px;
 }
 
